objects/Testing__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_version__c</fullName>
        <label>Test version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Testing_Type__c</fullName>
        <label>Testing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unit Testing</fullName>
                </value>
                <value>
                    <fullName>Regression Testing</fullName>
                </value>
                <value>
                    <fullName>Integration Testing</fullName>
                </value>
                <value>
                    <fullName>Functional Testing</fullName>
                </value>
                <value>
                    <fullName>Acceptance testing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Testing</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Testing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Testings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>